[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Csirke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0-alpha.4"
specs = { version = "0.16.1", features = ["specs-derive"] }
itertools = "0.9.0"
futures = "0.3.6"
quad-snd = { git = "https://github.com/not-fl3/quad-snd" }